# thesis

./: .gitignore  CMakeLists.txt  README.md  main.cc
src/: CMakeLists.txt  clause.cc  clause.h  constr.cc  constr.h  parser.cc  parser.h  solver.cc  solver.h  types.h  var_order.cc  var_order.h
src/b2b/: CMakeLists.txt  b2b.h  b2b_converter.cc  b2b_converter.h  b2b_parser.cc  b2b_parser.h  idea.txt  main.cc
src/benchmark/: CMakeLists.txt  benchmark.cc  benchmark.h  globals.h
src/cardinality_benchmark/: CMakeLists.txt  main.cc  parser.cc  parser.h
src/ctt/: CMakeLists.txt  ctt.h  ctt_benchmark.cc  ctt_benchmark.h  ctt_converter.cc  ctt_converter.h  main.cc  parser.cc  parser.h  starexec_run_encoder.sh  validator.cc
src/hstt/: CMakeLists.txt  hstt.cc  hstt.h  main.cc  xhstt_parser.cc  xhstt_parser.h
src/logger/: CMakeLists.txt  logger.cc  logger.h
src/max_sat_test/: CMakeLists.txt  main.cc  max_sat_bench_mark.cc  max_sat_bench_mark.h
src/pseudo_boolean/: CMakeLists.txt  main.cc  opb_benchmark.cc  opb_benchmark.h  opb_parser.cc  opb_parser.h
src/pumpkin/: CMakeLists.txt  main.cpp
src/pumpkin/Basic Data Structures/: CMakeLists.txt  assignments.h  boolean_literal.h  counters.cpp  custom_vector.h  key_value_heap.h  learned_pseudo_boolean_constraint.h  problem_specification.cpp  problem_specification.h  small_helper_structures.h  trail_list.cc  trail_list.h
src/pumpkin/Engine/: CMakeLists.txt  conflict_analysis_result_clausal.cpp  conflict_analysis_result_clausal.h  constraint_optimisation_solver.cpp  constraint_optimisation_solver.h  constraint_satisfaction_solver.cpp  constraint_satisfaction_solver.h  learned_clause_minimiser.cpp  learned_clause_minimiser.h  lower_bound_search.cpp  lower_bound_search.h  preprocessor.cpp  preprocessor.h  solver_state.cpp  solver_state.h  upper_bound_search.cpp  upper_bound_search.h  value_selector.cpp  value_selector.h  variable_selector.cpp  variable_selector.h
src/pumpkin/Propagators/: CMakeLists.txt  explanation_generator.h  explanation_generic.h  i_constraint_adder.cc  i_constraint_adder.h  propagator_generic.cpp  propagator_generic.h  reason_generic.h
src/pumpkin/Pseudo-Boolean Encoders/: CMakeLists.txt  EncoderGeneralisedTotaliserCP19_2.cc  EncoderGeneralisedTotaliserCP19_2.h  cardinality_constraint_encoder_unary.cpp  cardinality_constraint_encoder_unary.h  encoder_cardinality_network.cpp  encoder_generalised_totaliser.cpp  encoder_generalised_totaliser.h  encoder_tester.cpp  encoder_totaliser.cpp  encoder_totaliser.h
src/pumpkin/Utilities/: CMakeLists.txt  assignments.cpp  assignments.h  bit_string_map.cc  bit_string_map.h  boolean_assignment_vector.cpp  boolean_assignment_vector.h  boolean_literal.cpp  boolean_literal.h  boolean_variable.cpp  boolean_variable.h  combinatorics.h  counters.cpp  counters.h  custom_vector.cpp  custom_vector.h  directly_hashed_boolean_variable_labeller.cpp  directly_hashed_boolean_variable_labeller.h  directly_hashed_boolean_variable_set.cpp  directly_hashed_boolean_variable_set.h  directly_hashed_integer_set.cpp  gz_file_reader.cpp  gz_file_reader.h  key_value_heap.cpp  key_value_heap.h  learned_pseudo_boolean_constraint.cpp  learned_pseudo_boolean_constraint.h  learned_pseudo_boolean_constraint_iterator.cpp  learned_pseudo_boolean_constraint_iterator.h  linear_boolean_function.cpp  linear_boolean_function.h  linear_boolean_function_complex.cpp  linear_boolean_function_complex.h  parameter_handler.h  problem_specification.cpp  problem_specification.h  small_helper_structures.h  solution_tracker.cpp  solution_tracker.h  solver_output.h  (+1 more)
src/pumpkin_backup/: CMakeLists.txt  main.cpp
src/pumpkin_backup/Basic Data Structures/: assignments.cpp  assignments.h  boolean_literal.cpp  boolean_literal.h  boolean_variable.h  counters.h  cumulative_moving_average.cpp  exponential_moving_average.cpp  key_value_heap.cpp  key_value_heap.h  learned_pseudo_boolean_constraint.cpp  problem_specification.h  pseudo_boolean_term_iterator_abstract.h  solver_output.h  solver_parameters.h  stopwatch.h  trail_list.cc  vector_object_indexed.h
src/pumpkin_backup/Engine/: solver_state.cpp  value_selector.cpp  value_selector.h  variable_selector.cpp  variable_selector.h
src/pumpkin_backup/Propagators/: explanation_generic.h  propagator_generic.cpp  propagator_generic.h  reason_generic.h
src/pumpkin_backup/Pseudo-Boolean Encoders/: CMakeLists.txt  EncoderGeneralisedTotaliserCP19_2.cc  EncoderGeneralisedTotaliserCP19_2.h
src/sat/: CMakeLists.txt  sat_problem.cc  sat_problem.h  types.h
src/sat/constraints/: cardinality_constraint.cc  cardinality_constraint.h  i_constraint.cc  i_constraint.h  pseudo_boolean_constraint.cc  pseudo_boolean_constraint.h  sum_constraint.cc  sum_constraint.h
src/sat/encoders/: cardinality_network.cc  cardinality_network.h  generalized_totaliser.cc  generalized_totaliser.h  incremental_encoding.cc  incremental_encoding.h  totaliser_encoder.cc  totaliser_encoder.h
src/solver/: CMakeLists.txt  clause.cc  clause.h  parser.cc  parser.h  solver.cc  solver.h  types.h  var_order.cc  var_order.h
src/solver_wrappers/: CMakeLists.txt  crypto_mini_sat.cc  crypto_mini_sat.h  i_solver.cc  i_solver.h  pumpkin.cc  pumpkin.h  simple_solver.cc  simple_solver.h
src/sudoku/: CMakeLists.txt  benchmark_parser.h  encoder.cc  encoder.h  main.cc  sudoku.h
src/sudoku-solver/: encoder.cpp  encoder.h  idea.txt
src/sudoku_generator/: CMakeLists.txt  generator.cc  generator.h  generator_v_2.cc  generator_v_2.h  main.cc  sudoku_domain.h
src/sudoku_solver/: CMakeLists.txt  benchmark_parser.cc  benchmark_parser.h  encoder.cc  encoder.h  idea.txt  main.cc  sat_problem.h  sudoku_solver.cc  sudoku_solver.h  types.h
tests/: CMakeLists.txt  main_test.cc
tests/b2b/: CMakeLists.txt  b2b_converter_test.cc
tests/pumpkin/: CMakeLists.txt
tests/pumpkin/propagators/: pb_sum_test.cc
tests/sat/: CMakeLists.txt  sat_problem_test.cc  types_test.cc
tests/sat/encoders/: cardinality_network_test.cc  (+2 more)
tests/sudoku/: CMakeLists.txt  encoder_test.cc
tests/sudoku_solver/: CMakeLists.txt  encoder_test.cc
(+364 files in other folders)
