#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -DNDEBUG")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -DNDEBUG")
add_subdirectory(solver)
#add_subdirectory(sudoku)
add_subdirectory(sat)
#add_subdirectory(b2b)
#add_subdirectory(sudoku_generator)
add_subdirectory(pumpkin)
add_subdirectory(solver_wrappers)
#add_subdirectory(hstt)
#add_subdirectory(ctt)
#add_subdirectory(cardinality_benchmark)
add_subdirectory(logger)
add_subdirectory(max_sat_test)
#add_subdirectory(pseudo_boolean)
add_subdirectory(benchmark)