add_subdirectory("Basic Data Structures")
add_subdirectory(Engine)
add_subdirectory(Propagators)
add_subdirectory("Pseudo-Boolean Encoders")
add_library(pumpkin INTERFACE)
target_link_libraries(pumpkin INTERFACE engine basic_data_structures propagators pseudo_boolean_encoders)
add_executable(pumpkin_main main.cpp)
target_link_libraries(pumpkin_main pumpkin)