add_library(sat sat_problem.cc sat_problem.h types.h ../solver_wrappers/i_solver.h encoders/totaliser_encoder.cc encoders/totaliser_encoder.h encoders/generalized_totaliser.cc encoders/generalized_totaliser.h encoders/cardinality_network.cc encoders/cardinality_network.h encoders/incremental_encoding.cc encoders/incremental_encoding.h)