add_library(sat sat_problem.cc sat_problem.h types.h ../solver_wrappers/i_solver.h encoders/totaliser_encoder.cc encoders/totaliser_encoder.h encoders/generalized_totaliser.cc encoders/generalized_totaliser.h encoders/cardinality_network.cc encoders/cardinality_network.h constraints/i_constraint.h constraints/i_constraint.cc constraints/cardinality_constraint.cc constraints/cardinality_constraint.h constraints/sum_constraint.cc constraints/sum_constraint.h
        constraints/pseudo_boolean_constraint.cc constraints/pseudo_boolean_constraint.h)