add_library(propagator_generic explanation_generic.h propagator_generic.cpp propagator_generic.h reason_generic.h i_constraint_adder.cc i_constraint_adder.h)
target_link_libraries(propagator_generic utilities engine)
add_subdirectory(Clausal)
add_subdirectory(Pseudo-Boolean)
add_subdirectory(Dynamic)

add_library(propagators INTERFACE)
target_link_libraries(propagators INTERFACE pseudo_boolean clausal dynamic_propagators)