add_library(pseudo_boolean_encoders
        cardinality_constraint_encoder_unary.cpp
        cardinality_constraint_encoder_unary.h
        encoder_cardinality_network.cpp
        encoder_cardinality_network.h
        encoder_tester.cpp
        encoder_tester.h
        encoder_totaliser.cpp
        encoder_totaliser.h
        encoder_generalised_totaliser.cpp
        encoder_generalised_totaliser.h
        EncoderGeneralisedTotaliserCP19_2.cc EncoderGeneralisedTotaliserCP19_2.h)