
add_subdirectory(zlib-1.2.11)
add_library(utilities
        assignments.cpp
        assignments.h
        bit_string_map.cc
        bit_string_map.h
        boolean_assignment_vector.cpp
        boolean_assignment_vector.h
        boolean_literal.cpp
        boolean_literal.h
        boolean_variable.cpp
        boolean_variable.h
        combinatorics.cpp
        combinatorics.h
        counters.cpp
        counters.h
        cumulative_moving_average.cpp
        cumulative_moving_average.h
        custom_vector.cpp
        custom_vector.h
        directly_hashed_boolean_literal_set.cpp
        directly_hashed_boolean_literal_set.h
        directly_hashed_boolean_variable_labeller.cpp
        directly_hashed_boolean_variable_labeller.h
        directly_hashed_boolean_variable_set.cpp
        directly_hashed_boolean_variable_set.h
        directly_hashed_integer_set.cpp
        directly_hashed_integer_set.h
        directly_hashed_set.cpp
        exponential_moving_average.cpp
        exponential_moving_average.h
        fraction_unsigned_64bit.cpp
        fraction_unsigned_64bit.h
        gz_file_reader.cpp
        gz_file_reader.h
        key_value_heap.cpp
        key_value_heap.h
        learned_pseudo_boolean_constraint.cpp
        learned_pseudo_boolean_constraint.h
        learned_pseudo_boolean_constraint_iterator.cpp
        learned_pseudo_boolean_constraint_iterator.h
        linear_boolean_function.cpp
        linear_boolean_function.h
        linear_boolean_function_complex.cpp
        linear_boolean_function_complex.h
        luby_sequence_generator.cpp
        luby_sequence_generator.h
        pair_weight_literal.h
        parameter_handler.cpp
        parameter_handler.h
        problem_specification.cpp
        problem_specification.h
        pseudo_boolean_term_iterator_abstract.h
        runtime_assert.h
        simple_moving_average.cpp
        simple_moving_average.h
        small_helper_structures.h
        solution_tracker.cpp
        solution_tracker.h
        solver_output.h
        solver_output_checker.cpp
        solver_output_checker.h
        solver_parameters.h
        stopwatch.h
        vector_object_indexed.h
        )
target_link_libraries(utilities PRIVATE zlibstatic PUBLIC encoders)