add_library(cardinality propagator_cardinality.cc propagator_cardinality.h database_cardinality.cc database_cardinality.h watched_cardinality_constraint.cc watched_cardinality_constraint.h watch_list_cardinality.cc watch_list_cardinality.h watcher_cardinality_constraint.cc watcher_cardinality_constraint.h reason_cardinality_constraint.cc reason_cardinality_constraint.h explanation_cardinality_constraint.cc explanation_cardinality_constraint.h
        Encoders/totaliser_encoder.cc Encoders/totaliser_encoder.h propagator_cardinality2.cc propagator_cardinality2.h Encoders/i_encoder.h Encoders/i_encoder.cc Encoders/sequential_encoder.cc Encoders/sequential_encoder.h Encoders/incremental_sequential_encoder.cc Encoders/incremental_sequential_encoder.h)
target_link_libraries(cardinality propagator_generic)