add_library(propagator_dynamic watcher_dynamic_constraint.cc watcher_dynamic_constraint.h explanation_dynamic_constraint.cc explanation_dynamic_constraint.h reason_dynamic_constraint.cc reason_dynamic_constraint.h watch_list_dynamic.cc watch_list_dynamic.h watched_dynamic_constraint.cc watched_dynamic_constraint.h database_dynamic_constraint.cc database_dynamic_constraint.h propagator_dynamic.cc propagator_dynamic.h)
target_link_libraries(propagator_dynamic propagator_generic encoders)
add_subdirectory(PseudoBoolean)
add_subdirectory(Pairs)
add_subdirectory(Encoders)
add_subdirectory(Sum)
#add_subdirectory(PseudoBooleanBottomLayers)
add_library(dynamic_propagators INTERFACE)
target_link_libraries(dynamic_propagators INTERFACE pseudo_boolean_propagator encoders pseudo_boolean_pairs pb_sum_propagator )
