add_library(pseudo_boolean_propagator watched_pseudo_boolean_constraint_2.cc watched_pseudo_boolean_constraint_2.h explanation_pseudo_boolean_constraint_2.cc explanation_pseudo_boolean_constraint_2.h database_pseudo_boolean_2.cc database_pseudo_boolean_2.h propagator_pseudo_boolean_2.cc propagator_pseudo_boolean_2.h pseudo_boolean_adder.cc pseudo_boolean_adder.h)
target_link_libraries(pseudo_boolean_propagator propagator_generic encoders propagator_dynamic)
