add_library(pseudo_boolean_propagator_lower database_pseudo_boolean.cc database_pseudo_boolean.h explanation_pseudo_boolean_constraint.cc explanation_pseudo_boolean_constraint.h propagator_pseudo_boolean.cc propagator_pseudo_boolean.h reason_pseudo_boolean_constraint.cc reason_pseudo_boolean_constraint.h watch_list_pseudo_boolean.cc watch_list_pseudo_boolean.h watched_pseudo_boolean_constraint.cc watched_pseudo_boolean_constraint.h watcher_pseudo_boolean_constraint.cc watcher_pseudo_boolean_constraint.h learnt_group.cc learnt_group.h added_node.cc added_node.h node_database.cc node_database.h)
target_link_libraries(pseudo_boolean_propagator_lower propagator_generic encoders propagator_dynamic logger)
