add_library(pb_bottom_propagator database_pb_bottom_layers.cc database_pb_bottom_layers.h watch_list_pb_bottom_layers.cc watch_list_pb_bottom_layers.h watched_pb_bottom_layers_constraint.cc watched_pb_bottom_layers_constraint.h watcher_pb_bottom_layers_constraint.cc watcher_pb_bottom_layers_constraint.h explanation_pb_bottom_layers.cc explanation_pb_bottom_layers.h reason_pb_bottom_layers.cc reason_pb_bottom_layers.h sum_node.cc sum_node.h propagator_bottom_layers.cc propagator_bottom_layers.h)
target_link_libraries(pb_bottom_propagator propagator_generic encoders)
